--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     </li>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/contact.html">ContactUS</a>
+                        <a class="nav-link active" href="/contact.html">Contactus</a>
                     </li>
 
 
