--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">iCoder</a>
+        <a class="navbar-brand" href="/iCoderBootstrap">iCoder</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,9 +21,11 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
+            </li><ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a cla
+            <li class="nav-item">
+              <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                  Topics
@@ -39,7 +41,7 @@
               </li>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">ContactUS</a>
+              <a class="nav-link" href="/iCoderBootstrap/contact.html">ContactUS</a>
             </li>
             
             
